--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
 aniso8601==8.0.0
-asgiref==3.2.3
+asgiref==3.2.7
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
-Django==3.0.3
+Django==3.0.7
 Flask==1.1.1
 Flask-RESTful==0.3.8
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
-pytz==2019.3
+pytz==2020.1
 requests==2.22.0
 six==1.14.0
-sqlparse==0.3.0
+SQLAlchemy==1.3.13
+sqlparse==0.3.1
 UNKNOWN==0.0.0
 urllib3==1.25.8
 Werkzeug==1.0.0
